proof read of ch 4. and add t intro - and version for john

--- a/_posts/thesis_chapters/2023-12-5-Gdps.md
+++ b/_posts/thesis_chapters/2023-12-5-Gdps.md
@@ -71,16 +71,13 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
 
 
 
+
+
+
 ### Chapter outline
 
-In the last chapter I outlined use of tools in detail. In the next chapter I outline this use of key inclusive pedagogical methods that helped participants become part of an emerging community of game makers.
-
-This chapter analyses activity at a scope between the concrete tool use and the wider cultural context of the game making community. The particular focus is the implementation of individual game design patterns (GDPs). This chapter addresses how data gathered informs thinking on the research question how can game design patterns support the development of coding practices by novices?
-
-This chapter begins with reframing of game design patterns and game play design patterns which builds on the previous chapters description of the emerging learning design. Following this a Vignette of parent child interaction in game making process introduces an overview of interactions of that pair generated from analysis of video data.
-
-The chapter then focuses on the use of game design patterns by participants
-drawing on detailed observations of practice. A discussion section explores implications and observations from these findings in relation to existing research and concepts. As part if this discussion, I draw on the examples of use of game design patterns in practice to explore the analysis of GDPs as a mid-level construct, of use both to designers and as a pedagogical tool for those seeking to help novice coders become inculcated into a coding community.
+In the last chapter I outlined use of tools   often focusing on and emerging tensions in activity on a micro level. This chapter analyses this emergent activity at a mid-level scope between concrete tool use and the wider cultural context of the game making community. I focus on the implementation of individual game design patterns (GDPs) and in doing so addresses how data gathered informs thinking on the research question - _how can game design patterns support the development of coding practices by novices_?
+This chapter begins with re-examining of game design patterns and game play design patterns in the context of a community of novice coders. Following this a vignette of parent child interaction in game making process introduces an overview of interactions of that pair to help contextualise findings. The chapter then undertakes a systematic analysis of the use of game design patterns by participants drawing on detailed observations of practice. A discussion section explores implications and observations from these findings in relation to existing research and concepts. As part if this discussion, I draw on the examples of use of game design patterns in practice to explore the analysis of GDPs as a mid-level construct, of use both to designers and as a pedagogical tool for those seeking to help novice coders become inculcated into a coding community.
 
 <!-- This chapter builds towards a Matrix that could be included in a concluding chapter.
 https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/edit
