--- a/_posts/thesis_chapters/tocs/2023-12-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-12-4-Design.md_toc.md
@@ -1,7 +1,7 @@
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
--   [Short vignette illustrating shifts in scope of
-    activity](#short-vignette-illustrating-shifts-in-scope-of-activity)
+-   [Vignette illustrating shifts in scope of
+    activity](#vignette-illustrating-shifts-in-scope-of-activity)
     -   [Vignette 4.1 - An example of game making
         activity](#vignette-4.1---an-example-of-game-making-activity)
         -   [Table of Vignette](#table-of-vignette)
@@ -46,31 +46,29 @@
             errors](#addressing-code-syntax-errors)
         -   [Distributed vs. self-contained approaches to asset
             creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
-        -   [Shared community and remix
-            ability](#shared-community-and-remix-ability)
+        -   [Remixing and showcasing
+            projects](#remixing-and-showcasing-projects)
     -   [Design choices of the starter game
         template](#design-choices-of-the-starter-game-template)
+        -   [Structural design of the game
+            template](#structural-design-of-the-game-template)
         -   [Variable editing for player
             movement](#variable-editing-for-player-movement)
         -   [Level design and
             prototyping](#level-design-and-prototyping)
         -   [Background colour and a pixel
             art](#background-colour-and-a-pixel-art)
-        -   [Creating a simplified and clear project
-            structure](#creating-a-simplified-and-clear-project-structure)
-        -   [Observations on design behaviours encouraged through use of
-            game
-            template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
+    -   [Observations on the game template and core
+        tools](#observations-on-the-game-template-and-core-tools)
 -   [4. Participant conflict associated with project navigation and use
     of
     documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
+    -   [Quick Start Cards](#quick-start-cards)
     -   [Code snippet examples](#code-snippet-examples)
-    -   [Stand-alone tutorials](#stand-alone-tutorials)
-    -   [Organising tutorials into a linear structure, specifically in
-        the form of a
-        book](#organising-tutorials-into-a-linear-structure-specifically-in-the-form-of-a-book)
-    -   [Structuring and using a collection of game design
-        patterns](#structuring-and-using-a-collection-of-game-design-patterns)
+    -   [Structuring instructional tutorial
+        chapters](#structuring-instructional-tutorial-chapters)
+    -   [Theming the a collection of game design patterns to aid
+        navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
 -   [Chapter Discussion](#chapter-discussion)
     -   [On the emergent and mutual nature of the design and research
         process](#on-the-emergent-and-mutual-nature-of-the-design-and-research-process)
