--- a/_posts/thesis_chapters/2024-2-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-2-5-Gdps.md
@@ -66,6 +66,14 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
         agency](#discussion-on-gdps-emerging-processes-and-learner-agency)
 
 
+
+## Research Questions - June 2023
+
+1. What pedagogical tools and processes are available to support novices to overcome barriers to game coding and design?
+<!-- - What pedagogical factors are significant to support novices learning coding, particularly in game making contexts? -->
+2. How can learners build agency in an evolving community of game makers?
+3. How can game design patterns support the development of coding practices with novices?
+
 ### Chapter outline
 
 In the last chapter I outlined use of tools   often focusing on and emerging tensions in activity on a micro level. This chapter analyses this emergent activity at a mid-level scope between concrete tool use and the wider cultural context of the game making community. I focus on the implementation of individual game design patterns (GDPs) and in doing so addresses how data gathered informs thinking on the research question - _how can game design patterns support the development of coding practices by novices_?
