--- a/_posts/thesis_chapters/2023-12-5-Gdps2.md
+++ b/_posts/thesis_chapters/2023-12-5-Gdps2.md
@@ -74,6 +74,13 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
 2. How can learners build agency in an evolving community of game makers?
 3. How can game design patterns support the development of coding practices with novices?
 
+## Notes to restructure
+
+Really address  the community aspect of the RQ - and highlight that this is why personal elements are not explored in more detail
+Then add personal back in - but keep it very brief - and signpoint to future studies
+
+
+
 ### Chapter outline
 
 In the last chapter I outlined use of tools   often focusing on and emerging tensions in activity on a micro level. This chapter analyses this emergent activity at a mid-level scope between concrete tool use and the wider cultural context of the game making community. I focus on the implementation of individual game design patterns (GDPs) and in doing so addresses how data gathered informs thinking on the research question - _how can game design patterns support the development of coding practices by novices_?
