--- a/_posts/thesis_chapters/2023-12-5-Gdps2.md
+++ b/_posts/thesis_chapters/2023-12-5-Gdps2.md
@@ -79,6 +79,8 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
 Really address  the community aspect of the RQ - and highlight that this is why personal elements are not explored in more detail
 Then add personal back in - but keep it very brief - and signpoint to future studies
 
+In discussion - refocus discussion on using mid level design construct first - then GDP and pattern collection as an example.
+Also work out what to move to Lit Review - and restructure LT and Methodology based on two chapters near completion. 
 
 
 ### Chapter outline
