--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -110,12 +110,11 @@ This chapter centres on the exploration of the implementation of game design pat
 
     ... the germ-cell and the unit of analysis are one and the same thing, but in one case the developmental aspect is emphasised and in the other case the analytical aspect is emphasised. [@blunden_unit_2020]
 
-
 As a designer / researcher and practitioner both aspects are relevant and are explored separately in the following two sections.
 
-IS THIS NEEDED HERE? OR REDO THIS.
-**It is thus potentially helpful to undertake a deeper analysis of the design patterns** and specifically game design patterns at this point.  Recap on the value of design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS)
-How design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006].
+It is thus potentially helpful to undertake a deeper analysis of
+- game design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS)
+- how design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006].
 
 
 <!-- #### On GDPs as a concept to help analysis -->
@@ -126,28 +125,33 @@ Blunden cites the process of identifying a germ cell of activity as a fruitful p
 
 <!-- My decision to privilege the implementation of each GDP as the main objective  activity system mirrors choices by other researchers valuing  -->
 
-A granular exploration of the tensions and processes at work in a complex educational environment can via identifying emerging barriers and responses to comprehension, communication and practical barriers to implementing design challenges facilitates replicability of research and supports its potential value to other practitioners [@barab_using_2002]. However, despite the value of a micro approach which includes close analysis of implementation of code structures. The process of seeking and defining a key activity scope/unit for analysis helps define useful boundaries of what to analyse in depth, thus help avoid over-scoping of the study in which preludes a greater depth of analysis.
+CHECK AGAINST METHODOLOGY
+A granular exploration of the tensions and processes at work in a complex educational environment can via identifying emerging barriers and responses to comprehension, communication and practical barriers to implementing design challenges facilitates replicability of research and supports its potential value to other practitioners [@barab_using_2002].
 
-Thus, while in this study activity covers a full spectrum of activity in other chapters, this chapter focuses on the implementation of GDPs in greater depth allowing for the identification of  patterns of design stages involving discussion, planning, implementation and playtesting after each new game element. At this scope, each GDP can be seen as a project, taken here as a concrete implementation of a planned goal. This sentiment is echoed by a parent when noticing that the documentation on one GDPs involved several distinct stages - "It’s like a project in itself really!".
+<!-- However, despite the value of a micro approach which includes close analysis of implementation of code structures.  -->
 
+The process of seeking and defining a key activity scope/unit for analysis helps define useful boundaries of what to analyse in depth. This chapter has a narrow focus on the implementation of gameplay design patterns (GDPs)  allowing for the identification and analysis of patterns of participant behaviour and introduced and emerging community practices to do with GDPs.
+At this scope, for participants implementing each GDP can be seen as a project of the overarching objective to create a game. Here the term project here communicates a concrete implementation of a planned goal and also a sense that all elements of key activity are present at this level e.g. all stages of the design cycle (and another example?).  This sentiment is echoed by a parent when noticing that the documentation on one GDPs involved several distinct stages - "It’s like a project in itself really!".
+
+
+GDPs emerged as a unit of analysis through their initial observation of GDPs as a germ-cell being used at different phases / scope of the learning design as it evolved. The previous chapter explores how I developed these requests into a set of code examples, instruction tutorials, quick start activities which proposed micro level code modification. While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through transforming GDPs.
+
+The design process is described as a mutual, i that while I led the production of the resources, I was driven by the explicit requests and implicit needs of the community and resulting feedback. T
+
+The core concept of altering a game at the level of gameplay design pattern which emerged from this experimental pilot process.
+
+
+
+
+
+<!-- This study activity covers a wide spectrum of activity, in other chapters,  design stages involving discussion, planning, implementation and playtesting after each new game element.  -->
 <!-- THERE IS OVERLAP HERE WITH THE LAST CHAPTER - HOW TO REMOVE THAT AND RETAIN CLARITY ?
 
 Thus in this study activity covers a full spectrum including close analysis of implementation of code structures. However these smaller operations are not worthy of being treated as an activity system in full. WHY MAKE THIS POINT. wHAT IS THE OVERALL MOTIVATION HERE?  -->
-
-
-
-
-
 <!--
 #### On GDPs as a germ concept to help practical development -->
 
 <!-- NOTE - removed -  what is the germ cell of the overall game making activity. -->
-
-GDPs emerged as a unit of analysis through their initial observation of GDPs as a germ-cell being used at different phases / scope of the learning design as it evolved. Chapter four charts the evolution of the use of GDPs in the learning design from participant led brainstorming of desired features, to self-contained tutorials and code snippets. This then was enriched by wider framework from academia, professional community and and the work of educational Game Jams, the UMC framework.
-
-The design process is described as a mutual, i that while I led the production of the resources, I was driven by the explicit requests and implicit needs of the community and resulting feedback. The resulting design included a themed collection of GDPs
-
-
 
 <!-- around, game mechanics, game space, game polish and game challenges. -->
 
@@ -156,13 +160,13 @@ AT provides a concept of rising to the concrete which invites analysis of how th
 <!-- The previous chapter described the  key elements of the learning design that were in place by P2 ( remixing from a game template, use of distributed asset creation showcasing and social playtesting).  The shared tools and documentations began to shape goal setting around implementing new features, some where held in common with other groups. -->
 
 
-The core concept of altering a game at the level of gameplay design pattern which emerged from experimental pilot process is adapted by participants and used in various forms of activity.
 
-At a larger level, the amalgamation of the GDPs into a finished game, is key to the success of the project. Good games communicate their affordances, (in the form of GDPs) to the player without the need for extensive additional documentation [@gee_learning_2005].
 
-This process also communicates GDPs implicitly to players, a process borne out by brainstorming sessions early in the process which say participants listing GDPs or variants of them without explicit guidance in this direction. This  goal setting and implementation using GDP as a bse developed into a principle activity of P1 with varied results.
+Good games communicate their affordances, (in the form of GDPs) to the player without the need for extensive additional documentation [@gee_learning_2005].
 
-By P2, to support a scaffolded entry to this practice, I developed quick start activities which proposed micro level code modification rather than implementing new code structures. While they were distinct in their pedagogy use, these shot-cuts  stemmed from the same germ-cell base of altering the game through transforming GDPs.
+This process also communicates GDPs implicitly to players, a process borne out by brainstorming sessions early in the process which say participants listing GDPs or variants of them without explicit guidance in this direction. This  goal setting and implementation using GDP as a base developed into a principle activity of P1 with varied results.
+
+
 
 In addition to support their identification of the different elements that make up a game I created a sheet which drew on existing work framework (mechanics, space, goals, etc) to scaffold the process.
 
