some work on lit review and altering the order also

--- a/_posts/thesis_chapters/tocs/2024-1-5-Gdps2.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-1-5-Gdps2.md_toc.md
@@ -33,7 +33,8 @@
         -   [Other examples of GDP driving adoption of technical
             processes](#other-examples-of-gdp-driving-adoption-of-technical-processes)
         -   [Use of evolving GDP terminology to facilitate design
-            practices -](#use-of-evolving-gdp-terminology-to-facilitate-design-practices--)
+            practices
+            -](#use-of-evolving-gdp-terminology-to-facilitate-design-practices--)
 -   [Cultural Dimension](#cultural-dimension)
     -   [GDPs can encourage learners to design for others - ALSO LINKED
         TO IDEATION? - is this guided
